export interface Customer {
  id?: string;
  companyId: string;
  name: string;
  phone?: string;
  address?: string;
  cep?: string;
  rua?: string;
  numero?: string;
  complemento?: string;
  bairro?: string;
  cidade?: string;
  uf?: string;
  lat?: number;
  lng?: number;
  dataAniversario?: string; // 'YYYY-MM-DD', date-only sem hora/timezone
}
