// Schema — ERP Gaspareto
// Gerado a partir das interfaces em src/models/*.ts e das coleções Firestore
// referenciadas nos services (collection(this.firestore, '<nome>')).
//
// IMPORTANTE: o banco real é Firestore (NoSQL, documentos), não relacional.
// Este DBML é uma representação aproximada para visualização/documentação —
// não existem chaves estrangeiras de fato nem integridade referencial no
// banco; os relacionamentos abaixo (Ref:) são inferidos de campos que guardam
// o id de outro documento (ex.: idProduct, customerId) e são reforçados só
// pela lógica das transações no código-cliente, não pelo Firestore.

Table companies {
  id            string    [pk, note: 'doc id gerado pelo Firestore']
  name          string
  document      string    [null]
  plan          string    [note: 'trial | basic | pro']
  status        string    [note: 'active | suspended | canceled']
  modules       json      [note: 'ModuleConfig: pdv, pedidos, gestao, rotas, contas, clientes, compras, vendedores (booleans) — substitui o doc único config/company']
  createdAt     timestamp
}

Table users {
  uid           string    [pk, note: 'id = uid do Firebase Auth']
  email         string
  companyId     string    [ref: > companies.id]
  role          string    [note: 'owner | admin | employee']
  createdAt     timestamp
}

Table products {
  id            string    [pk, note: 'doc id gerado pelo Firestore']
  companyId     string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  title         string
  buyPrice      number    [note: 'sobrescrito pela última compra registrada (ver regra-de-negocio.md)']
  sellPrice     number
  stock         number
  urlImage      string    [null, note: 'base64 da imagem, salvo direto no doc']
  color         string    [null]
}

Table customers {
  id            string    [pk]
  companyId     string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  name          string
  phone         string    [null]
  address       string    [null, note: 'endereço formatado livre, fallback']
  cep           string    [null]
  rua           string    [null]
  numero        string    [null]
  complemento   string    [null]
  bairro        string    [null]
  cidade        string    [null]
  uf            string    [null]
  lat           number    [null]
  lng           number    [null]
}

Table vendedores {
  id            string    [pk, note: 'doc id gerado pelo Firestore']
  companyId     string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  name          string
  comissoes     json      [note: 'array de VendedorComissaoItem embutido: idProduct, percentual (0-100) — produto do catálogo sem entrada aqui = 0% de comissão']
}

Table sales {
  id             string    [pk]
  companyId      string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  total          number
  date           timestamp
  items          json      [note: 'array de SaleItem embutido: idProduct, productName, quantity, priceAtSale, priceAtCost']
  paymentMethod  string    [note: 'enum: dinheiro | pix']
  sale_type      string    [note: 'pdv | order']
  customerId     string    [null, ref: > customers.id, note: 'só preenchido quando sale_type = order']
  status         string    [note: 'completed | canceled — não está na interface TS, escrito direto pelo service']
}

Table orders {
  id                    string    [pk]
  companyId             string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  orderNumber           number    [note: 'sequencial por empresa (#1, #2, ...), gerado via counters/{companyId} em transação — só controle humano, não usar como id']
  customerName          string
  customerPhone         string    [null]
  customerId            string    [null, ref: > customers.id]
  vendedorId            string    [null, ref: > vendedores.id, note: 'opcional — pedido pode ser criado/editado/finalizado sem vendedor']
  vendedorName          string    [null, note: 'snapshot do nome do vendedor no momento do vínculo']
  items                 json      [note: 'array de OrderItem embutido: idProduct, productName, quantity, priceAtSale, priceAtCost']
  itemsTotal            number
  shippingCost          number
  total                 number    [note: 'itemsTotal + shippingCost']
  deliveryType          string    [note: 'pickup | delivery']
  address               string    [null]
  addressLat            number    [null]
  addressLng            number    [null]
  status                string    [note: 'open|pending|preparing|ready|delivering|delivered|finished|canceled']
  createdAt             timestamp
  scheduledDate         timestamp
  actualDeliveryDate    timestamp [null]
  paymentDate           timestamp [null]
  closingDate           timestamp [null]
  observations          string    [null]
}

Table comandas {
  id            string    [pk]
  companyId     string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  customerName  string
  items         json      [note: 'array de ComandaItem embutido: idProduct, productName, quantity, priceAtSale, priceAtCost']
  total         number
  createdAt     timestamp
  status        string    [note: 'open | closed']
}

Table purchases {
  id            string    [pk]
  companyId     string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  date          timestamp
  idProduct     string    [ref: > products.id]
  unityValue    number
  amount        number
}

Table purchaseProducts {
  id                string    [pk]
  companyId         string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  name              string
  defaultValue      number
  recurring         boolean
  recurrencePeriod  string    [null, note: 'weekly | monthly (inglês, diferente de bills)']
  createdAt         timestamp
}

Table bills {
  id                  string    [pk]
  companyId           string    [ref: > companies.id, note: 'isolamento multi-tenant, ver regra-de-negocio.md seção 10']
  name                string
  value               number
  dueDate             timestamp [null]
  status              string    [note: 'pendente | recebido | pago']
  recurring           boolean
  recurrencePeriod    string    [null, note: 'semanal | mensal (português, diferente de purchaseProducts)']
  paidAt              timestamp [null]
  receivedAt          timestamp [null]
  createdAt           timestamp
  purchaseProductId   string    [null, ref: > purchaseProducts.id]
}

Table config {
  id       string  [pk, note: "único doc usado: id = 'company' — LEGADO"]
  modules  json    [note: 'ModuleConfig — substituído por companies.modules (ver regra-de-negocio.md seção 11); manter documentado até confirmar remoção do doc config/company em produção']
}

Table counters {
  id               string  [pk, note: 'doc id = companyId — um contador por empresa']
  nextOrderNumber  number  [note: 'próximo orderNumber a emitir (começa em 1 se doc não existe); lido e incrementado via runTransaction em OrderService.addOrder, garante sequência atômica mesmo com escritas concorrentes']
}

// Observações:
// - items dentro de sales/orders/comandas são arrays embutidos no próprio
//   documento (subcoleção não é usada) — cada item referencia products.id
//   via idProduct, mas sem enforcement do banco.
// - company_id é campo simples (não FK real do Firestore) — a integridade é
//   reforçada só por firestore.rules e pelo código-cliente (TenantService),
//   nunca pelo banco em si. Ver regra-de-negocio.md seção 10 para o motivo de
//   ser campo e não subcoleção companies/{id}/products/...
// - purchaseProducts na coleção real do Firestore é "purchase-products"
//   (kebab-case) — nome da tabela aqui mantido em camelCase por já estar
//   assim no arquivo original; não é inconsistência nova desta rodada.
